@@ -1,3 +1,6 @@
+fixed a problem in Preview mode in which the folder toolbar wouldn't get
+activated on startup.
+
 optimized the caching system somewhat so that we're not writing files over
 and over agian to the filesystem.  this may also fix a problem where a
 message could be cached as blank if the connection to the store broke at
